# noughts_and_crosses

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
ai-graph/: Cargo.toml
ai-graph/src/: breed.rs  lib.rs  new_gene.rs  new_genes.rs  output.rs  tests.rs  validate.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/support/: mod.rs
noughts-and-crosses-ai-test/: Cargo.toml
noughts-and-crosses-ai-test/src/: main.rs
noughts-and-crosses-game/: Cargo.toml
noughts-and-crosses-game/src/: main.rs
noughts-and-crosses-lib/: Cargo.toml
noughts-and-crosses-lib/src/: lib.rs  tools.rs
noughts-and-crosses-lib/src/ai/smart_random/: random.rs
noughts-and-crosses-lib/src/ai/smart_random/rating_board/: mod.rs  process_rating_board.rs
noughts-and-crosses-lib/src/movement/: mod.rs  move_cursor.rs
noughts-and-crosses-lib/src/tests/: mod.rs  won.rs
noughts-and-crosses-random-train/: Cargo.toml
noughts-and-crosses-random-train/src/: main.rs
src/: draw.rs  lib.rs  main.rs  movement.rs  tests.rs  tools.rs  won.rs
src/ai/: mod.rs  random.rs  smart_random.rs
src/ai/smart_random/: mod.rs  process_rating_board.rs  random.rs
src/ai/smart_random/rating_board/: mod.rs  process_rating_board.rs
src/movement/: mod.rs  move_cursor.rs
src/tests/: mod.rs  won.rs
src/won/: mod.rs
