[package]
name = "ai-graph"
version = "0.0.3"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/efunb/noughts-and-crosses-ai-collection"
description = """
Ai Graph is a new tool for creating machine learning that runs blazingly fast when learning has finnished.
"""
edition = '2018'

[dependencies]
rand = "0.5"