[package]
name = "gui"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
readme = "README.md"
repository = "https://gitlab.com/efunb/rustGame"
description = """
RustGame.
"""
[package.metadata.docs.rs]
all-features = true



[dependencies]
conrod = "0.61"
conrod_derive = "0.1"
rand = "0.5"
daggy = "0.5.0"
fnv = "1.0"
num = "0.1.30"
pistoncore-input = "0.21.0"
rusttype = { version = "0.5.0", features = ["gpu_cache"] }
find_folder = "0.3.0"
image = "0.19"
petgraph = "0.4"
winit = "0.16"
glium = "0.22"
# glutin_gfx.rs example dependencies
gfx_window_glutin = "0.25"
glutin = "0.17"
# piston_window.rs example dependencies
piston_window = "0.80"
# Optional dependencies and features
# ----------------------------------
#
# None of the following dependencies are necessary to use conrod, however they may greatly
# simplify the work involved when using conrod with certain window or graphics backends.
#
# `glium`
# Provides functions for rendering the `conrod::render::Primitives` yielded by `Ui::draw`.
# Enables the `conrod::backend::glium` module.
#
# `winit`
# Provides a function for converting winit `Event`s to `conrod::event::Raw`s.
# Enables the `conrod::backend::winit` module.
#
# `piston`
# Provides functions for:
# - Converting piston `GenericEvent` types to `conrod::event::Raw`s.
# - Rendering the `conrod::render::Primitives` yielded by `Ui::draw`.
# Enables the `conrod::backend::piston` module.

piston2d-graphics = { version = "0.26", optional = true }
gfx = { version = "0.17", optional = true }
gfx_core = { version = "0.8", optional = true }

[features]
piston = ["piston2d-graphics"]
gfx_rs=["gfx","gfx_core"]

[dev-dependencies]



