[package]
name = "rust_game"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
readme = "README.md"
repository = "https://gitlab.com/efunb/rustGame"
description = """
RustGame.
"""
[dependencies]

ai-graph = { path = "../ai-graph" }
noughtsAndCrossesLib = { path = "../noughts-and-crosses-lib" }