[package]
name = "noughts-and-crosses-game"
version = "0.1.0"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
readme = "README.md"
repository = "https://gitlab.com/efunb/rustGame"
description = """
RustGame.
"""
[dependencies]

ai-graph = { path = "../ai-graph" }
noughts_and_crosses_lib = { path = "../noughts-and-crosses-lib" }



